// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stories Snapshots Documentazione/Componenti/Rating RatingBase 1`] = `
<div>
  <fieldset
    class="rating rating-label mb-3"
  >
    <legend
      class=""
    >
      Rating
    </legend>
    <input
      aria-describedby="star5aDescription"
      class=""
      id="star5a"
      name="ratingA"
      type="radio"
      value="5"
    />
    <label
      class="full form-label"
      for="star5a"
    >
      <svg
        class="icon icon-sm"
        enable-background="new 0 0 24 24"
        role="img"
        viewBox="0 0 24 24"
        xml:space="preserve"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          icon
        </title>
        <path
          d="M12 1.7 9.5 9.2H1.6L8 13.9l-2.4 7.6 6.4-4.7 6.4 4.7-2.4-7.6 6.4-4.7h-7.9L12 1.7z"
        />
      </svg>
      <span
        class="visually-hidden"
      >
        Valuta 5 stelle su 5
      </span>
    </label>
    <input
      aria-describedby="star4aDescription"
      class=""
      id="star4a"
      name="ratingA"
      type="radio"
      value="4"
    />
    <label
      class="full form-label"
      for="star4a"
    >
      <svg
        class="icon icon-sm"
        enable-background="new 0 0 24 24"
        role="img"
        viewBox="0 0 24 24"
        xml:space="preserve"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          icon
        </title>
        <path
          d="M12 1.7 9.5 9.2H1.6L8 13.9l-2.4 7.6 6.4-4.7 6.4 4.7-2.4-7.6 6.4-4.7h-7.9L12 1.7z"
        />
      </svg>
      <span
        class="visually-hidden"
      >
        Valuta 4 stelle su 5
      </span>
    </label>
    <input
      aria-describedby="star3aDescription"
      class=""
      id="star3a"
      name="ratingA"
      type="radio"
      value="3"
    />
    <label
      class="full form-label"
      for="star3a"
    >
      <svg
        class="icon icon-sm"
        enable-background="new 0 0 24 24"
        role="img"
        viewBox="0 0 24 24"
        xml:space="preserve"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          icon
        </title>
        <path
          d="M12 1.7 9.5 9.2H1.6L8 13.9l-2.4 7.6 6.4-4.7 6.4 4.7-2.4-7.6 6.4-4.7h-7.9L12 1.7z"
        />
      </svg>
      <span
        class="visually-hidden"
      >
        Valuta 3 stelle su 5
      </span>
    </label>
    <input
      aria-describedby="star2aDescription"
      class=""
      id="star2a"
      name="ratingA"
      type="radio"
      value="2"
    />
    <label
      class="full form-label"
      for="star2a"
    >
      <svg
        class="icon icon-sm"
        enable-background="new 0 0 24 24"
        role="img"
        viewBox="0 0 24 24"
        xml:space="preserve"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          icon
        </title>
        <path
          d="M12 1.7 9.5 9.2H1.6L8 13.9l-2.4 7.6 6.4-4.7 6.4 4.7-2.4-7.6 6.4-4.7h-7.9L12 1.7z"
        />
      </svg>
      <span
        class="visually-hidden"
      >
        Valuta 2 stelle su 5
      </span>
    </label>
    <input
      aria-describedby="star1aDescription"
      class=""
      id="star1a"
      name="ratingA"
      type="radio"
      value="1"
    />
    <label
      class="full form-label"
      for="star1a"
    >
      <svg
        class="icon icon-sm"
        enable-background="new 0 0 24 24"
        role="img"
        viewBox="0 0 24 24"
        xml:space="preserve"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          icon
        </title>
        <path
          d="M12 1.7 9.5 9.2H1.6L8 13.9l-2.4 7.6 6.4-4.7 6.4 4.7-2.4-7.6 6.4-4.7h-7.9L12 1.7z"
        />
      </svg>
      <span
        class="visually-hidden"
      >
        Valuta 1 stelle su 5
      </span>
    </label>
  </fieldset>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Rating RatingConLabel 1`] = `
<div>
  <fieldset
    class="rating rating-label mb-3"
  >
    <span
      class="visually-hidden"
    >
      Valutazione
    </span>
     
    <span>
      4
       stelle
    </span>
    <span
      class="visually-hidden"
    >
      su 5
    </span>
    <input
      aria-describedby="star5bDescription"
      class=""
      id="star5b"
      name="ratingB"
      type="radio"
      value="5"
    />
    <label
      class="full form-label"
      for="star5b"
    >
      <svg
        class="icon icon-sm"
        enable-background="new 0 0 24 24"
        role="img"
        viewBox="0 0 24 24"
        xml:space="preserve"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          icon
        </title>
        <path
          d="M12 1.7 9.5 9.2H1.6L8 13.9l-2.4 7.6 6.4-4.7 6.4 4.7-2.4-7.6 6.4-4.7h-7.9L12 1.7z"
        />
      </svg>
      <span
        class="visually-hidden"
      >
        Valuta 5 stelle su 5
      </span>
    </label>
    <input
      aria-describedby="star4bDescription"
      checked=""
      class=""
      id="star4b"
      name="ratingB"
      type="radio"
      value="4"
    />
    <label
      class="full form-label"
      for="star4b"
    >
      <svg
        class="icon icon-sm"
        enable-background="new 0 0 24 24"
        role="img"
        viewBox="0 0 24 24"
        xml:space="preserve"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          icon
        </title>
        <path
          d="M12 1.7 9.5 9.2H1.6L8 13.9l-2.4 7.6 6.4-4.7 6.4 4.7-2.4-7.6 6.4-4.7h-7.9L12 1.7z"
        />
      </svg>
      <span
        class="visually-hidden"
      >
        Valuta 4 stelle su 5
      </span>
    </label>
    <input
      aria-describedby="star3bDescription"
      class=""
      id="star3b"
      name="ratingB"
      type="radio"
      value="3"
    />
    <label
      class="full form-label"
      for="star3b"
    >
      <svg
        class="icon icon-sm"
        enable-background="new 0 0 24 24"
        role="img"
        viewBox="0 0 24 24"
        xml:space="preserve"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          icon
        </title>
        <path
          d="M12 1.7 9.5 9.2H1.6L8 13.9l-2.4 7.6 6.4-4.7 6.4 4.7-2.4-7.6 6.4-4.7h-7.9L12 1.7z"
        />
      </svg>
      <span
        class="visually-hidden"
      >
        Valuta 3 stelle su 5
      </span>
    </label>
    <input
      aria-describedby="star2bDescription"
      class=""
      id="star2b"
      name="ratingB"
      type="radio"
      value="2"
    />
    <label
      class="full form-label"
      for="star2b"
    >
      <svg
        class="icon icon-sm"
        enable-background="new 0 0 24 24"
        role="img"
        viewBox="0 0 24 24"
        xml:space="preserve"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          icon
        </title>
        <path
          d="M12 1.7 9.5 9.2H1.6L8 13.9l-2.4 7.6 6.4-4.7 6.4 4.7-2.4-7.6 6.4-4.7h-7.9L12 1.7z"
        />
      </svg>
      <span
        class="visually-hidden"
      >
        Valuta 2 stelle su 5
      </span>
    </label>
    <input
      aria-describedby="star1bDescription"
      class=""
      id="star1b"
      name="ratingB"
      type="radio"
      value="1"
    />
    <label
      class="full form-label"
      for="star1b"
    >
      <svg
        class="icon icon-sm"
        enable-background="new 0 0 24 24"
        role="img"
        viewBox="0 0 24 24"
        xml:space="preserve"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          icon
        </title>
        <path
          d="M12 1.7 9.5 9.2H1.6L8 13.9l-2.4 7.6 6.4-4.7 6.4 4.7-2.4-7.6 6.4-4.7h-7.9L12 1.7z"
        />
      </svg>
      <span
        class="visually-hidden"
      >
        Valuta 1 stelle su 5
      </span>
    </label>
  </fieldset>
</div>
`;

exports[`Stories Snapshots Documentazione/Componenti/Rating RatingReadOnly 1`] = `
<div>
  <fieldset
    class="rating rating-read-only rating rating-label mb-3"
  >
    <legend
      class="visually-hidden"
    >
      Valutazione 4 stelle su 5
    </legend>
    <input
      aria-describedby="star5cDescription"
      aria-hidden="true"
      class=""
      disabled=""
      id="star5c"
      name="ratingC"
      type="radio"
      value="5"
    />
    <label
      class="full form-label"
      for="star5c"
    >
      <svg
        class="icon icon-sm"
        enable-background="new 0 0 24 24"
        role="img"
        viewBox="0 0 24 24"
        xml:space="preserve"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          icon
        </title>
        <path
          d="M12 1.7 9.5 9.2H1.6L8 13.9l-2.4 7.6 6.4-4.7 6.4 4.7-2.4-7.6 6.4-4.7h-7.9L12 1.7z"
        />
      </svg>
      <span
        class="visually-hidden"
      >
        Valuta 5 stelle su 5
      </span>
    </label>
    <input
      aria-describedby="star4cDescription"
      aria-hidden="true"
      checked=""
      class=""
      disabled=""
      id="star4c"
      name="ratingC"
      type="radio"
      value="4"
    />
    <label
      class="full form-label"
      for="star4c"
    >
      <svg
        class="icon icon-sm"
        enable-background="new 0 0 24 24"
        role="img"
        viewBox="0 0 24 24"
        xml:space="preserve"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          icon
        </title>
        <path
          d="M12 1.7 9.5 9.2H1.6L8 13.9l-2.4 7.6 6.4-4.7 6.4 4.7-2.4-7.6 6.4-4.7h-7.9L12 1.7z"
        />
      </svg>
      <span
        class="visually-hidden"
      >
        Valuta 4 stelle su 5
      </span>
    </label>
    <input
      aria-describedby="star3cDescription"
      aria-hidden="true"
      class=""
      disabled=""
      id="star3c"
      name="ratingC"
      type="radio"
      value="3"
    />
    <label
      class="full form-label"
      for="star3c"
    >
      <svg
        class="icon icon-sm"
        enable-background="new 0 0 24 24"
        role="img"
        viewBox="0 0 24 24"
        xml:space="preserve"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          icon
        </title>
        <path
          d="M12 1.7 9.5 9.2H1.6L8 13.9l-2.4 7.6 6.4-4.7 6.4 4.7-2.4-7.6 6.4-4.7h-7.9L12 1.7z"
        />
      </svg>
      <span
        class="visually-hidden"
      >
        Valuta 3 stelle su 5
      </span>
    </label>
    <input
      aria-describedby="star2cDescription"
      aria-hidden="true"
      class=""
      disabled=""
      id="star2c"
      name="ratingC"
      type="radio"
      value="2"
    />
    <label
      class="full form-label"
      for="star2c"
    >
      <svg
        class="icon icon-sm"
        enable-background="new 0 0 24 24"
        role="img"
        viewBox="0 0 24 24"
        xml:space="preserve"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          icon
        </title>
        <path
          d="M12 1.7 9.5 9.2H1.6L8 13.9l-2.4 7.6 6.4-4.7 6.4 4.7-2.4-7.6 6.4-4.7h-7.9L12 1.7z"
        />
      </svg>
      <span
        class="visually-hidden"
      >
        Valuta 2 stelle su 5
      </span>
    </label>
    <input
      aria-describedby="star1cDescription"
      aria-hidden="true"
      class=""
      disabled=""
      id="star1c"
      name="ratingC"
      type="radio"
      value="1"
    />
    <label
      class="full form-label"
      for="star1c"
    >
      <svg
        class="icon icon-sm"
        enable-background="new 0 0 24 24"
        role="img"
        viewBox="0 0 24 24"
        xml:space="preserve"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          icon
        </title>
        <path
          d="M12 1.7 9.5 9.2H1.6L8 13.9l-2.4 7.6 6.4-4.7 6.4 4.7-2.4-7.6 6.4-4.7h-7.9L12 1.7z"
        />
      </svg>
      <span
        class="visually-hidden"
      >
        Valuta 1 stelle su 5
      </span>
    </label>
  </fieldset>
</div>
`;
